# gawo

./: .gitignore  .gitmodules  CMakeLists.txt  README  build-scan-build.sh  build-tests-apitrace.sh  build-tests.sh  build.sh
gawo/: camerarenderer.hpp  glclasses.hpp  glwindow.hpp  log.hpp  scenegraph.hpp  spriterenderer.hpp
gawo/datastructures/: scenegraph.hpp
gawo/gl/renderer/: camerarenderer.hpp  spriterenderer.hpp
gawo/gl/window/: glwindow.hpp
gawo/gl/window/sdlwrapper/: sdlwindow.hpp  sdlwrapper.hpp
gawo/gl/wrapper/: glclasses.hpp  shader.hpp
gawo/io/: log.hpp
sdlwrapper/: sdlwindow.hpp  sdlwrapper.hpp
shaders/: colorpicking.fs  colorpicking.vs  sprite.fs  sprite.vs
spp/: ast.hpp  context.hpp  lexer.hpp  library.hpp  loader.hpp  spp.hpp
src/gawo/: camerarenderer.cpp  glclasses.cpp  log.cpp  scenegraph.cpp  spriterenderer.cpp
src/gawo/datastructures/: scenegraph.cpp
src/gawo/gl/renderer/: camerarenderer.cpp  spriterenderer.cpp
src/gawo/gl/window/sdlwrapper/: sdlwindow.cpp
src/gawo/gl/window/x11wrapper/: x11window.cpp
src/gawo/gl/wrapper/: glclasses.cpp  shader.cpp
src/gawo/io/: log.cpp
src/sdlwrapper/: sdlwindow.cpp
src/spp/: ast.cpp  context.cpp  library.cpp  loader.cpp  parser.ypp
src/x11wrapper/: x11window.cpp
tests/: CMakeLists.txt  main.cpp
tests/gawo/: scenegraphtest.cpp  spriterenderertest.cpp
tests/spp/: eval.cpp  fulltests.cpp  parsing.cpp
x11wrapper/: CMakeLists.txt  x11window.hpp
